fixed faq nav spacing

--- a/css/main.css
+++ b/css/main.css
@@ -525,7 +525,7 @@ input[type=button] {
     }
 
     header nav {
-      width: 20%;
+      width: 25%;
     }
 
     header nav ul {
